--- a/maup_demostration.ipynb
+++ b/maup_demostration.ipynb
@@ -31,7 +31,10 @@
    "metadata": {},
    "source": [
     "###Generate Data\n",
-    "\n"
+    "\n",
+    "The goal here is generate a 2d space that has a number of points, each with two traits. The value of those traits will be more similar to the points nearby than those far away. We also want the values of the two traits to have some correlation. A real world example would be \n",
+    "\n",
+    "My method for generating this space is to first generate a randomly located point with random values. Then for the rest of the points, randomly generate its location, and the first value will be the mean of the ten nearest points plus or minus a random difference. The second value will be the first value, plus or minus a random difference. The first 10 point generated will be taking the mean value of the entire space.\n"
    ]
   },
   {
@@ -96,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ""
+    "Next something to calculate the correlation of the units. We are using squares\n"
    ]
   },
   {
